--- a/isc-tattoo-studio/src/styles.css
+++ b/isc-tattoo-studio/src/styles.css
@@ -26,7 +26,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgb(0, 0, 0, 0.25);
+  background: #f0cd01;
   border-radius: 5px;
 }
 
